nice looking ui

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
             <div class="display">
             </div>
             <div class="keys">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>10</button>
-                <button>11</button>
-                <button>12</button>
-                <button>13</button>
-                <button>14</button>
-                <button>15</button>
-                <button>16</button>
-                <button>17</button>
-                <button>18</button>
-                <button>19</button>
-                <button>20</button>
+                <button id="ac">AC</button>
+                <button id="brackets">( )</button>
+                <button id="percent">%</button>
+                <button id="devide">/</button>
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
+                <button id="multi">X</button>
+                <button id="four">4</button>
+                <button id="five">5</button>
+                <button id="six">6</button>
+                <button id="sub">-</button>
+                <button id="one">1</button>
+                <button id="two">2</button>
+                <button id="three">3</button>
+                <button id="add">+</button>
+                <button id="zero">0</button>
+                <button id="dot">.</button>
+                <button id="del">Del.</button>
+                <button id="equal">=</button>
             </div>
         </div>
     </div>
