--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="keys">
                 <button id="ac" onclick="allclear()">AC</button>
-                <button id="brackets">( )</button>
+                <button id="brackets" onclick="brakets()">( )</button>
                 <button id="percent"onclick="concat('%')">%</button>
                 <button id="devide"onclick="concat('/')">/</button>
                 <button id="seven" onclick="concat(7)">7</button>
