separte block  for result and horizontal scrolling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="frame">
             <div class="display">
                 <div class="val"></div>
+                <div class="res"></div>
             </div>
             <div class="keys">
                 <button id="ac" onclick="allclear()">AC</button>
@@ -32,7 +33,7 @@
                 <button id="zero" onclick="concat(0)">0</button>
                 <button id="dot" onclick="concat('.')">.</button>
                 <button id="del" onclick="del()">Del.</button>
-                <button id="equal" onclick="equal()">=</button>
+                <button id="equal" onclick="e()">=</button>
             </div>
         </div>
     </div>
